*ants-2.3.1-r1 (25 Mar 2019)
*ants-9999 (25 Mar 2019)

  25 Mar 2019;  <chymera@gentoo.org> +ants-2.3.1-r1.ebuild, +ants-9999.ebuild,
  +files/99ants, +metadata.xml:
  sci-biology/ants: fixes ahead of Gentoo Science